# NeuralDE

./: .gitignore  NeuralODE.ipynb  ODESolving.ipynb  pyproject.toml
demo/: NeuralODE.py
tools/: __init__.py  data.py  plots.py
